# vulkan-engine

./: Cargo.toml  README.md  build.rs
shaders/: compile.sh  frag.spv  input_structures.glsl  shader.frag  shader.vert  vert.spv
shaders/gui/spv/: frag.spv  vert.spv
shaders/gui/src/: vert.vert
shaders/spv/: colored_triangle_mesh_vert.spv  colored_triangle_vert.spv  gradient.spv  mesh_frag.spv  mesh_vert.spv  rgb_to_rgba.spv  tex_image_frag.spv
shaders/src/: colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  input_structures.glsl  mesh.vert  rgb_to_rgba.comp  tex_image.frag
src/: buffer.rs  camera.rs  command_buffers.rs  descriptor.rs  descriptor_sets.rs  device.rs  frame_rate_limiter.rs  gui.rs  image.rs  main.rs  mesh.rs  model.rs  pipeline.rs  swapchain.rs  texture.rs  vertex.rs
src/engine/: builder.rs  camera.rs  commands.rs  descriptors.rs  device.rs  engine_data.rs  error.rs  frame.rs  gui.rs  image.rs  material.rs  memory.rs  mod.rs  pipelines.rs  scene.rs  swapchain.rs
src/engine/gltf/: loader.rs  mod.rs
src/engine/meshes/: gltf.rs  mod.rs  obj.rs
src/mesh/: gltf.rs  loader.rs  mod.rs  obj.rs
